# docket

./: .coderabbit.yaml  .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  SECURITY.md  cubic.yaml  pyproject.toml  renovate.json
.github/workflows/: ci.yml  release.yml  scorecard.yml  security.yml
docs/: architecture.md  control-plane-model.md  long-running-agent-work.md  overview.md  release-safety.md
scripts/: build-release.sh  docket_entry.py  pm_entry.py
src/docket/: __init__.py  artifact.py  cli.py  commands.py  config.py  errors.py  fsops.py  gitops.py  issue.py  projects.py  render.py  states.py  telemetry.py  tiers.py  ui.py  worktree_gate.py
tests/: conftest.py  test_artifact.py  test_commands.py  test_config.py  test_didyoumean.py  test_gitops.py  test_groom.py  test_id_prefix.py  test_identity_v3.py  test_orphans.py  test_priority_case.py  test_projects.py  test_telemetry.py  test_triage.py  test_ui.py  test_writing_templates.py
